hphp/test/quick/parse_fail_strict_hashbang_whitespace_start.php.expectf
HipHop Fatal error: syntax error, unexpected T_HACK_ERROR, expecting $end in %s on line 2
